--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react-router-dom": "5.3.3",
     "actioncable": "5.2.8-1",
     "axios": "^1.3.4",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.0.9",
     "framer-motion": "^11.11.11",
@@ -67,6 +68,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
