--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "start": "serve dist -s -n -L -p $PORT"
   },
   "dependencies": {
     "@babel/core": ">=7.0.0 <8.0.0",
