--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "^1.3.4",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^7.0.9",
     "framer-motion": "^11.11.11",
     "html-to-image": "^1.11.11",
@@ -70,6 +71,7 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/crypto-js": "^4.2.2",
+    "@types/dotenv": "^8.2.3",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
