--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.22.3",
@@ -64,7 +65,9 @@
     "rxjs": "^7.8.0",
     "sass": "^1.58.3",
     "serve": "^14.2.4",
+    "sonner": "^1.7.4",
     "tabler-icons-react": "^1.56.0",
+    "use-form": "^2.0.3",
     "vite-node": "^0.29.2",
     "webpack": "^4.4.0 || ^5.9.0"
   },
