--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "@tabler/icons": "1.119.0",
     "@tabler/icons-react": "^2.9.0",
+    "@tanstack/react-query": "^5.66.7",
     "@tiptap/extension-link": "2.0.0-beta.202",
     "@tiptap/react": "2.0.0-beta.202",
     "@types/actioncable": "^5.2.7",
