--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@babel/core": ">=7.0.0 <8.0.0",
-    "@emotion/react": "^11.10.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mantine/carousel": "^5.10.2",
     "@mantine/core": "^5.10.5",
     "@mantine/dates": "^5.10.2",
@@ -27,6 +28,9 @@
     "@mantine/spotlight": "^5.10.2",
     "@mantine/tiptap": "^5.10.2",
     "@mantine/utils": "^6.0.9",
+    "@mui/material": "^6.4.5",
+    "@mui/styled-engine-sc": "^6.4.3",
+    "@mui/x-charts": "^7.27.0",
     "@reactivex/rxjs": "^6.6.7",
     "@reduxjs/toolkit": "^1.9.2",
     "@tabler/icons": "1.119.0",
@@ -39,7 +43,9 @@
     "@types/react-router-dom": "5.3.3",
     "actioncable": "5.2.8-1",
     "axios": "^1.3.4",
+    "chart.js": "^4.4.8",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^7.0.9",
@@ -56,6 +62,7 @@
     "prosemirror-transform": ">=1.7.0 <2.0.0",
     "prosemirror-view": "^1.30.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
@@ -67,6 +74,7 @@
     "sass": "^1.58.3",
     "serve": "^14.2.4",
     "sonner": "^1.7.4",
+    "styled-components": "^6.1.15",
     "tabler-icons-react": "^1.56.0",
     "use-form": "^2.0.3",
     "vite-node": "^0.29.2",
