--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "tabler-icons-react": "^1.56.0",
     "use-form": "^2.0.3",
     "vite-node": "^0.29.2",
-    "webpack": "^4.4.0 || ^5.9.0"
+    "webpack": "^4.4.0 || ^5.9.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
