--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.22.3",
+    "recharts": "^2.15.1",
     "redux": "^4.2.1",
     "rxjs": "^7.8.0",
     "sass": "^1.58.3",
