--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@mui/material": "^6.4.5",
     "@mui/styled-engine-sc": "^6.4.3",
     "@mui/x-charts": "^7.27.0",
+    "@react-pdf/renderer": "^4.3.0",
     "@reactivex/rxjs": "^6.6.7",
     "@reduxjs/toolkit": "^1.9.2",
     "@tabler/icons": "1.119.0",
